--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "mongodb": "^6.12.0",
     "next": "14.2.8",
     "react": "^18",
